Update README with professional documentation
- Reorganize sections for better readability
- Add clear step-by-step instructions for IntelliJ
- Include terminal compilation and execution commands
- Fix main class configuration for ProdutoGUI
- Improve overall structure and user experience"